added screen that shows transaction graph per hour, day and month
